# MNISTEndToEnd

./: .gitignore  README.md  app.py  main.py  pyproject.toml  train.py
frontend/: README.md  package-lock.json
frontend/src/: App.jsx
model/: arch.py
