[project]
name = "mnistendtoend"
version = "0.1.0"
description = "FASTAPI with PyTorch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "wandb>=0.24.1",
    "torch",
    "torchvision",
    "torchinfo>=1.8.0",
    "tqdm>=4.67.3",
    "fastapi>=0.128.2",
    "gunicorn>=25.0.1",
    "uvicorn>=0.40.0",
    "python-dotenv>=1.2.1",
]

[tool.uv.pip]
extra-index-url = ["https://download.pytorch.org/whl/cu128"]
